@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7919 2004/11/19 19:08:55 jlam Exp $
+$NetBSD: CHANGES,v 1.7920 2004/11/19 19:15:46 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5348,3 +5348,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated flyspell to 1.7f [wiz 2004-11-19]
 	Updated fceu to 0.98.12 [wiz 2004-11-19]
 	Updated pam-ldap to 176 [jlam 2004-11-19]
+	Updated hpijs to 1.7.1 [jdolecek 2004-11-19]
